Add Mock Auth APIs

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 CLOUDINARY_CLOUD_NAME=sontd-nal-vn
 CLOUDINARY_API_KEY=1234567890
 CLOUDINARY_API_SECRET=HHJFgusa1782tHASq8lad986
+JWT_SECRET=some-secret-key
